parser/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On program shift to state 161
-- On ident shift to state 33
-- On exprs shift to state 162
-- On expr shift to state 164
-- On EOF reduce production exprs -> 

State 1:
expr -> WHILE . LPAREN expr RPAREN expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On LPAREN shift to state 2

State 2:
expr -> WHILE LPAREN . expr RPAREN expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 158

State 3:
expr -> TRUE . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE reduce production expr -> TRUE 
-- On USEROP reduce production expr -> TRUE 
-- On TRUE reduce production expr -> TRUE 
-- On TILDE reduce production expr -> TRUE 
-- On SEMICOLON reduce production expr -> TRUE 
-- On RSUPASSIGN reduce production expr -> TRUE 
-- On RPAREN reduce production expr -> TRUE 
-- On REPEAT reduce production expr -> TRUE 
-- On RBRACKET reduce production expr -> TRUE 
-- On RBRACE reduce production expr -> TRUE 
-- On RASSIGN reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OUTERPROD reduce production expr -> TRUE 
-- On ORVEC reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NULL reduce production expr -> TRUE 
-- On NEXT reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On NA reduce production expr -> TRUE 
-- On MULT reduce production expr -> TRUE 
-- On MODULUS reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On MATRIXMULT reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LPAREN reduce production expr -> TRUE 
-- On LISTSUBSET reduce production expr -> TRUE 
-- On LE reduce production expr -> TRUE 
-- On LBRACKET reduce production expr -> TRUE 
-- On LBRACE reduce production expr -> TRUE 
-- On KRONECKERPROD reduce production expr -> TRUE 
-- On INTDIV reduce production expr -> TRUE 
-- On INT reduce production expr -> TRUE 
-- On IF reduce production expr -> TRUE 
-- On IDENT reduce production expr -> TRUE 
-- On HELP reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GE reduce production expr -> TRUE 
-- On FUNCTION reduce production expr -> TRUE 
-- On FOR reduce production expr -> TRUE 
-- On FLOAT reduce production expr -> TRUE 
-- On FALSE reduce production expr -> TRUE 
-- On EXP reduce production expr -> TRUE 
-- On EQEQ reduce production expr -> TRUE 
-- On EOF reduce production expr -> TRUE 
-- On DIV reduce production expr -> TRUE 
-- On COMPLEX reduce production expr -> TRUE 
-- On COMMA reduce production expr -> TRUE 
-- On COLON reduce production expr -> TRUE 
-- On BREAK reduce production expr -> TRUE 
-- On BANG reduce production expr -> TRUE 
-- On ATTRIBUTE reduce production expr -> TRUE 
-- On ANDVEC reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 4:
expr -> TILDE . expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 157

State 5:
expr -> REPEAT . expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 156

State 6:
expr -> PLUS . expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 155

State 7:
expr -> NULL . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE reduce production expr -> NULL 
-- On USEROP reduce production expr -> NULL 
-- On TRUE reduce production expr -> NULL 
-- On TILDE reduce production expr -> NULL 
-- On SEMICOLON reduce production expr -> NULL 
-- On RSUPASSIGN reduce production expr -> NULL 
-- On RPAREN reduce production expr -> NULL 
-- On REPEAT reduce production expr -> NULL 
-- On RBRACKET reduce production expr -> NULL 
-- On RBRACE reduce production expr -> NULL 
-- On RASSIGN reduce production expr -> NULL 
-- On PLUS reduce production expr -> NULL 
-- On OUTERPROD reduce production expr -> NULL 
-- On ORVEC reduce production expr -> NULL 
-- On OR reduce production expr -> NULL 
-- On NULL reduce production expr -> NULL 
-- On NEXT reduce production expr -> NULL 
-- On NEQ reduce production expr -> NULL 
-- On NA reduce production expr -> NULL 
-- On MULT reduce production expr -> NULL 
-- On MODULUS reduce production expr -> NULL 
-- On MINUS reduce production expr -> NULL 
-- On MATRIXMULT reduce production expr -> NULL 
-- On LT reduce production expr -> NULL 
-- On LPAREN reduce production expr -> NULL 
-- On LISTSUBSET reduce production expr -> NULL 
-- On LE reduce production expr -> NULL 
-- On LBRACKET reduce production expr -> NULL 
-- On LBRACE reduce production expr -> NULL 
-- On KRONECKERPROD reduce production expr -> NULL 
-- On INTDIV reduce production expr -> NULL 
-- On INT reduce production expr -> NULL 
-- On IF reduce production expr -> NULL 
-- On IDENT reduce production expr -> NULL 
-- On HELP reduce production expr -> NULL 
-- On GT reduce production expr -> NULL 
-- On GE reduce production expr -> NULL 
-- On FUNCTION reduce production expr -> NULL 
-- On FOR reduce production expr -> NULL 
-- On FLOAT reduce production expr -> NULL 
-- On FALSE reduce production expr -> NULL 
-- On EXP reduce production expr -> NULL 
-- On EQEQ reduce production expr -> NULL 
-- On EOF reduce production expr -> NULL 
-- On DIV reduce production expr -> NULL 
-- On COMPLEX reduce production expr -> NULL 
-- On COMMA reduce production expr -> NULL 
-- On COLON reduce production expr -> NULL 
-- On BREAK reduce production expr -> NULL 
-- On BANG reduce production expr -> NULL 
-- On ATTRIBUTE reduce production expr -> NULL 
-- On ANDVEC reduce production expr -> NULL 
-- On AND reduce production expr -> NULL 

State 8:
expr -> NEXT . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE reduce production expr -> NEXT 
-- On USEROP reduce production expr -> NEXT 
-- On TRUE reduce production expr -> NEXT 
-- On TILDE reduce production expr -> NEXT 
-- On SEMICOLON reduce production expr -> NEXT 
-- On RSUPASSIGN reduce production expr -> NEXT 
-- On RPAREN reduce production expr -> NEXT 
-- On REPEAT reduce production expr -> NEXT 
-- On RBRACKET reduce production expr -> NEXT 
-- On RBRACE reduce production expr -> NEXT 
-- On RASSIGN reduce production expr -> NEXT 
-- On PLUS reduce production expr -> NEXT 
-- On OUTERPROD reduce production expr -> NEXT 
-- On ORVEC reduce production expr -> NEXT 
-- On OR reduce production expr -> NEXT 
-- On NULL reduce production expr -> NEXT 
-- On NEXT reduce production expr -> NEXT 
-- On NEQ reduce production expr -> NEXT 
-- On NA reduce production expr -> NEXT 
-- On MULT reduce production expr -> NEXT 
-- On MODULUS reduce production expr -> NEXT 
-- On MINUS reduce production expr -> NEXT 
-- On MATRIXMULT reduce production expr -> NEXT 
-- On LT reduce production expr -> NEXT 
-- On LPAREN reduce production expr -> NEXT 
-- On LISTSUBSET reduce production expr -> NEXT 
-- On LE reduce production expr -> NEXT 
-- On LBRACKET reduce production expr -> NEXT 
-- On LBRACE reduce production expr -> NEXT 
-- On KRONECKERPROD reduce production expr -> NEXT 
-- On INTDIV reduce production expr -> NEXT 
-- On INT reduce production expr -> NEXT 
-- On IF reduce production expr -> NEXT 
-- On IDENT reduce production expr -> NEXT 
-- On HELP reduce production expr -> NEXT 
-- On GT reduce production expr -> NEXT 
-- On GE reduce production expr -> NEXT 
-- On FUNCTION reduce production expr -> NEXT 
-- On FOR reduce production expr -> NEXT 
-- On FLOAT reduce production expr -> NEXT 
-- On FALSE reduce production expr -> NEXT 
-- On EXP reduce production expr -> NEXT 
-- On EQEQ reduce production expr -> NEXT 
-- On EOF reduce production expr -> NEXT 
-- On DIV reduce production expr -> NEXT 
-- On COMPLEX reduce production expr -> NEXT 
-- On COMMA reduce production expr -> NEXT 
-- On COLON reduce production expr -> NEXT 
-- On BREAK reduce production expr -> NEXT 
-- On BANG reduce production expr -> NEXT 
-- On ATTRIBUTE reduce production expr -> NEXT 
-- On ANDVEC reduce production expr -> NEXT 
-- On AND reduce production expr -> NEXT 

State 9:
expr -> NA . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE reduce production expr -> NA 
-- On USEROP reduce production expr -> NA 
-- On TRUE reduce production expr -> NA 
-- On TILDE reduce production expr -> NA 
-- On SEMICOLON reduce production expr -> NA 
-- On RSUPASSIGN reduce production expr -> NA 
-- On RPAREN reduce production expr -> NA 
-- On REPEAT reduce production expr -> NA 
-- On RBRACKET reduce production expr -> NA 
-- On RBRACE reduce production expr -> NA 
-- On RASSIGN reduce production expr -> NA 
-- On PLUS reduce production expr -> NA 
-- On OUTERPROD reduce production expr -> NA 
-- On ORVEC reduce production expr -> NA 
-- On OR reduce production expr -> NA 
-- On NULL reduce production expr -> NA 
-- On NEXT reduce production expr -> NA 
-- On NEQ reduce production expr -> NA 
-- On NA reduce production expr -> NA 
-- On MULT reduce production expr -> NA 
-- On MODULUS reduce production expr -> NA 
-- On MINUS reduce production expr -> NA 
-- On MATRIXMULT reduce production expr -> NA 
-- On LT reduce production expr -> NA 
-- On LPAREN reduce production expr -> NA 
-- On LISTSUBSET reduce production expr -> NA 
-- On LE reduce production expr -> NA 
-- On LBRACKET reduce production expr -> NA 
-- On LBRACE reduce production expr -> NA 
-- On KRONECKERPROD reduce production expr -> NA 
-- On INTDIV reduce production expr -> NA 
-- On INT reduce production expr -> NA 
-- On IF reduce production expr -> NA 
-- On IDENT reduce production expr -> NA 
-- On HELP reduce production expr -> NA 
-- On GT reduce production expr -> NA 
-- On GE reduce production expr -> NA 
-- On FUNCTION reduce production expr -> NA 
-- On FOR reduce production expr -> NA 
-- On FLOAT reduce production expr -> NA 
-- On FALSE reduce production expr -> NA 
-- On EXP reduce production expr -> NA 
-- On EQEQ reduce production expr -> NA 
-- On EOF reduce production expr -> NA 
-- On DIV reduce production expr -> NA 
-- On COMPLEX reduce production expr -> NA 
-- On COMMA reduce production expr -> NA 
-- On COLON reduce production expr -> NA 
-- On BREAK reduce production expr -> NA 
-- On BANG reduce production expr -> NA 
-- On ATTRIBUTE reduce production expr -> NA 
-- On ANDVEC reduce production expr -> NA 
-- On AND reduce production expr -> NA 

State 10:
expr -> MINUS . expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 154

State 11:
expr -> LBRACE . exprseq RBRACE [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On exprseq shift to state 147
-- On expr shift to state 149
-- On RBRACE reduce production exprseq -> 

State 12:
expr -> INT . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE reduce production expr -> INT 
-- On USEROP reduce production expr -> INT 
-- On TRUE reduce production expr -> INT 
-- On TILDE reduce production expr -> INT 
-- On SEMICOLON reduce production expr -> INT 
-- On RSUPASSIGN reduce production expr -> INT 
-- On RPAREN reduce production expr -> INT 
-- On REPEAT reduce production expr -> INT 
-- On RBRACKET reduce production expr -> INT 
-- On RBRACE reduce production expr -> INT 
-- On RASSIGN reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On OUTERPROD reduce production expr -> INT 
-- On ORVEC reduce production expr -> INT 
-- On OR reduce production expr -> INT 
-- On NULL reduce production expr -> INT 
-- On NEXT reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On NA reduce production expr -> INT 
-- On MULT reduce production expr -> INT 
-- On MODULUS reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On MATRIXMULT reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LPAREN reduce production expr -> INT 
-- On LISTSUBSET reduce production expr -> INT 
-- On LE reduce production expr -> INT 
-- On LBRACKET reduce production expr -> INT 
-- On LBRACE reduce production expr -> INT 
-- On KRONECKERPROD reduce production expr -> INT 
-- On INTDIV reduce production expr -> INT 
-- On INT reduce production expr -> INT 
-- On IF reduce production expr -> INT 
-- On IDENT reduce production expr -> INT 
-- On HELP reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GE reduce production expr -> INT 
-- On FUNCTION reduce production expr -> INT 
-- On FOR reduce production expr -> INT 
-- On FLOAT reduce production expr -> INT 
-- On FALSE reduce production expr -> INT 
-- On EXP reduce production expr -> INT 
-- On EQEQ reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On DIV reduce production expr -> INT 
-- On COMPLEX reduce production expr -> INT 
-- On COMMA reduce production expr -> INT 
-- On COLON reduce production expr -> INT 
-- On BREAK reduce production expr -> INT 
-- On BANG reduce production expr -> INT 
-- On ATTRIBUTE reduce production expr -> INT 
-- On ANDVEC reduce production expr -> INT 
-- On AND reduce production expr -> INT 

State 13:
expr -> IF . expr expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
expr -> IF . expr expr expr [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LPAREN LISTSUBSET LE LBRACKET LBRACE KRONECKERPROD INTDIV INT IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On WHILE shift to state 1
-- On TRUE shift to state 3
-- On TILDE shift to state 4
-- On REPEAT shift to state 5
-- On PLUS shift to state 6
-- On NULL shift to state 7
-- On NEXT shift to state 8
-- On NA shift to state 9
-- On MINUS shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 13
-- On IDENT shift to state 14
-- On HELP shift to state 19
-- On FUNCTION shift to state 20
-- On FOR shift to state 24
-- On FLOAT shift to state 28
-- On FALSE shift to state 29
-- On COMPLEX shift to state 30
-- On BREAK shift to state 31
-- On BANG shift to state 32
-- On ident shift to state 33
-- On expr shift to state 136

State 14:
ident -> IDENT . [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LSUPASSIGN LPAREN LISTSUBSET LE LBRACKET LBRACE LASSIGN KRONECKERPROD INTDIV INT IN IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EQASSIGN EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
ident -> IDENT . COLON2 IDENT [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LSUPASSIGN LPAREN LISTSUBSET LE LBRACKET LBRACE LASSIGN KRONECKERPROD INTDIV INT IN IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EQASSIGN EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
ident -> IDENT . COLON3 IDENT [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LSUPASSIGN LPAREN LISTSUBSET LE LBRACKET LBRACE LASSIGN KRONECKERPROD INTDIV INT IN IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EQASSIGN EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On COLON3 shift to state 15
-- On COLON2 shift to state 17
-- On WHILE reduce production ident -> IDENT 
-- On USEROP reduce production ident -> IDENT 
-- On TRUE reduce production ident -> IDENT 
-- On TILDE reduce production ident -> IDENT 
-- On SEMICOLON reduce production ident -> IDENT 
-- On RSUPASSIGN reduce production ident -> IDENT 
-- On RPAREN reduce production ident -> IDENT 
-- On REPEAT reduce production ident -> IDENT 
-- On RBRACKET reduce production ident -> IDENT 
-- On RBRACE reduce production ident -> IDENT 
-- On RASSIGN reduce production ident -> IDENT 
-- On PLUS reduce production ident -> IDENT 
-- On OUTERPROD reduce production ident -> IDENT 
-- On ORVEC reduce production ident -> IDENT 
-- On OR reduce production ident -> IDENT 
-- On NULL reduce production ident -> IDENT 
-- On NEXT reduce production ident -> IDENT 
-- On NEQ reduce production ident -> IDENT 
-- On NA reduce production ident -> IDENT 
-- On MULT reduce production ident -> IDENT 
-- On MODULUS reduce production ident -> IDENT 
-- On MINUS reduce production ident -> IDENT 
-- On MATRIXMULT reduce production ident -> IDENT 
-- On LT reduce production ident -> IDENT 
-- On LSUPASSIGN reduce production ident -> IDENT 
-- On LPAREN reduce production ident -> IDENT 
-- On LISTSUBSET reduce production ident -> IDENT 
-- On LE reduce production ident -> IDENT 
-- On LBRACKET reduce production ident -> IDENT 
-- On LBRACE reduce production ident -> IDENT 
-- On LASSIGN reduce production ident -> IDENT 
-- On KRONECKERPROD reduce production ident -> IDENT 
-- On INTDIV reduce production ident -> IDENT 
-- On INT reduce production ident -> IDENT 
-- On IN reduce production ident -> IDENT 
-- On IF reduce production ident -> IDENT 
-- On IDENT reduce production ident -> IDENT 
-- On HELP reduce production ident -> IDENT 
-- On GT reduce production ident -> IDENT 
-- On GE reduce production ident -> IDENT 
-- On FUNCTION reduce production ident -> IDENT 
-- On FOR reduce production ident -> IDENT 
-- On FLOAT reduce production ident -> IDENT 
-- On FALSE reduce production ident -> IDENT 
-- On EXP reduce production ident -> IDENT 
-- On EQEQ reduce production ident -> IDENT 
-- On EQASSIGN reduce production ident -> IDENT 
-- On EOF reduce production ident -> IDENT 
-- On DIV reduce production ident -> IDENT 
-- On COMPLEX reduce production ident -> IDENT 
-- On COMMA reduce production ident -> IDENT 
-- On COLON reduce production ident -> IDENT 
-- On BREAK reduce production ident -> IDENT 
-- On BANG reduce production ident -> IDENT 
-- On ATTRIBUTE reduce production ident -> IDENT 
-- On ANDVEC reduce production ident -> IDENT 
-- On AND reduce production ident -> IDENT 

State 15:
ident -> IDENT COLON3 . IDENT [ WHILE USEROP TRUE TILDE SEMICOLON RSUPASSIGN RPAREN REPEAT RBRACKET RBRACE RASSIGN PLUS OUTERPROD ORVEC OR NULL NEXT NEQ NA MULT MODULUS MINUS MATRIXMULT LT LSUPASSIGN LPAREN LISTSUBSET LE LBRACKET LBRACE LASSIGN KRONECKERPROD INTDIV INT IN IF IDENT HELP GT GE FUNCTION FOR FLOAT FALSE EXP EQEQ EQASSIGN EOF DIV COMPLEX COMMA COLON BREAK BANG ATTRIBUTE ANDVEC AND ]
-- On IDENT shift to state 16
